package OnlineTicket;

import java.util.Date;

// Класс, представляющий пользователя системы.
class User implements UserActions {
    @Override
    public boolean authorize(String username, String password) {
        // Реализация метода
        return false;
    }

    @Override
    public boolean selectRoute(String routeId, Date time) {
        // Реализация метода
        return false;
    }

    @Override
    public boolean checkTicketAvailability() {
        // Реализация метода
        return false;
    }

    @Override
    public boolean checkFunds() {
        // Реализация метода
        return false;
    }


    /**
     * Попытка забронировать билет.
     *
     * @return true, если бронирование успешно, false в противном случае.
     * @pre User должен быть авторизован и выбран маршрут.
     * @pre Билеты на выбранный маршрут и время должны быть доступны.
     * @pre У пользователя должно быть достаточно средств для бронирования.
     * @post Билет забронирован.
     * <p>
     * Этот метод позволяет пользователю попытаться забронировать билет на выбранный маршрут и время.
     * Для успешной бронировки необходимо выполнение следующих условий:
     * - Пользователь должен быть предварительно авторизован в системе (authorize).
     * - Пользователь должен выбрать конкретный маршрут и время (selectRoute).
     * - Должны быть доступны билеты на выбранный маршрут и время (checkTicketAvailability).
     * - У пользователя должно быть достаточно средств для бронирования (checkFunds).
     * <p>
     * Если все предусловия выполняются, билет будет успешно забронирован, и метод вернет true.
     * В противном случае, если хотя бы одно из предусловий не выполняется, бронирование не будет произведено, и метод вернет false.
     */
    public boolean reserveTicket() {
        // ... реализация метода ...
        // Проверка предусловий
        if (!isAuthorized()) {
            return false; // Пользователь не авторизован
        }

        if (!isRouteSelected()) {
            return false; // Маршрут не выбран
        }

        if (!checkTicketAvailability()) {
            return false; // Билеты не доступны
        }

        if (!checkFunds()) {
            return false; // Недостаточно средств
        }

        // Реализация бронирования билета
        if (performReservation()) {
            // Постусловие: Билет успешно забронирован
            return true;
        } else {
            return false; // Ошибка при бронировании
        }
    }
    /**
     * Выполнить резервирование.
     *
     * @return true, если бронирование успешно, false в противном случае.
     * @pre должны быть выполнены предисловия метода reserveTicket.
     * @post Билет забронирован.
     * <p>
     * Данный метод производит бронирование или отказ в бронировании билета для User.
     * <p>
     * Если все предусловия выполняются reserveTicket., билет будет успешно забронирован, и метод вернет true.
     * В противном случае, если хотя бы одно из предусловий не выполняется, бронирование не будет произведено, и метод вернет false.
     */
    private boolean performReservation() {
        return false;
    }

    /**
     * Выбор маршрута.
     * <p>
     * Данный метод позволяет выбрать маршрут билета.
     * <p>
     * @param Route маршрут билета, который выбирает User.
     * @pre User должен выбрать доступный маршрут.
     * @post Маршрут выбран.
     * @return true - маршрут выбран. false - маршрут отсуствует.
     * @throw Указан несуществующий маршрут. Маршрут недоступен.
     */
    private boolean isRouteSelected() {

        return false;
    }
    /**
     * Авторизация User.
     * <p>
     * Данный метод позволяет авторизироваться User.
     * <p>
     * @param pass - пароль User.
     * @param login - логин User.
     * @pre User должен быть зарегестрирован. Иметь актуальный логин и пароль для входа.
     * @post Успешная авторизация User.
     * @return true - Успешная авторизация. false - Авторизация не выполнена.
     * @throw Указан неверный логин. Указан неверный пароль. Комбинации логина и пароля не существует.
     */
    private boolean isAuthorized() {
        return false;
    }

    /**
     * Вычесть средства.
     * <p>
     * Данный метод позволяет вычесть средства User с его платежного счета за покупку билета или услуги.
     * <p>
     * @param User - пользователь
     * @param accountNumber - номер счета.
     * @param amountOfPayment - сумма платежа.
     * @pre User должен быть зарегестрирован. Иметь актуальный платежный счет.Счет должен иметь сумму, необходимую для совершения покупки билета.
     * @post Срдества перечислены.
     * @return true - Успешное списание средств. false - Ошибка списания средств.
     * @throw Недостаточно средств для совершения платежа. Некорректный номер счета. Несуществующий пользователь.
     */
    public boolean deductFunds() {
        // Реализация метода
        return false;
    }

    /**
     * Подтвердить покупку.
     * <p>
     * Данный метод позволяет потвердить покупку.
     * <p>
     * @param User - пользователь
     * @param accountNumber - номер счета.
     * @param amountOfPayment - сумма платежа.
     * @pre User должен потвердить покупку.
     * @post Потверждение платежа.
     * @return true - Покупка потверждена. false - Ошибка потверждения покупки.
     * @throw Недостаточно средств для совершения платежа. Некорректный номер счета. Несуществующий пользователь.Пользователь не потдтвердил покупку.
     */
    public boolean confirmPurchase() {
        // Реализация метода
        return false;
    }

    /**
     * Обновить наличие билетов.
     * <p>
     * Данный метод позволяет проверить наличия билетов по указанным параметрам.
     * <p>
     * @param routeId - маршрут.
     * @param departureTime - время отправления.
     * @param price - цена.
     * @pre метод проверяет наличие билетов по параметрам: routeId,departureTime,price.
     * @post Билет найден.
     * @return true - Найден билет, соответсвующий параметрам. false - Билет не найден.
     * @throw Некорректный routeId. Некорректный departureTime. Некорректный price.
     */
    public void updateTicketAvailability() {
        // Реализация метода
    }
    /**
     * Отмена бронирования.
     * <p>
     * Данный метод позволяет отменить бронирование.
     * <p>
     * @param Ticket - билет.
     * @param User - пользователь.
     * @param ReservationNumber - номер резервации.             
     * @pre метод позволяет отменить бронирование билета пользователем.
     * @post Бронь снята.
     * @return true - Бронь успешно отменена. false - Бронь не отменена.
     * @throw Некорректный Ticket. Истечение срока для отмены бронирования. Брони не существует.
     */
    public boolean cancelReservation() {
        // Реализация метода
        return false;
    }
}